[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/handlebars.png" type="Texture" id=2]
[ext_resource path="res://assets/sfx/new_ground_smack.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/cheqflagdash.png" type="Texture" id=4]
[ext_resource path="res://CheqFlagTyre.tscn" type="PackedScene" id=5]
[ext_resource path="res://DashboardNeedle.tscn" type="PackedScene" id=6]

[sub_resource type="SphereShape" id=1]
radius = 30.0

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.263886, 1, 0.42948 )

[node name="Player" type="Spatial"]
script = ExtResource( 1 )

[node name="CheqFlag" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, -0.711 )
visible = false
texture = ExtResource( 4 )

[node name="DashboardNeedle" parent="CheqFlag" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.436, -0.498, -0.01 )

[node name="DashboardNeedle2" parent="CheqFlag" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.712757, -0.766, 0.00999999 )

[node name="CheqFlagTyre2" parent="CheqFlag" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.636, -0.095, -0.01 )

[node name="CheqFlagTyre" parent="CheqFlag" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.64, -0.095, 0.01 )

[node name="Motorbike" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.782165, -0.71074 )
texture = ExtResource( 2 )

[node name="RemovalArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="RemovalArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -17.953 )
shape = SubResource( 1 )

[node name="SpawnPoints" type="Spatial" parent="."]

[node name="Position3D_1" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.05449, 0, -44.4891 )

[node name="Position3D_2" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.19853, 0, -44.4596 )

[node name="Position3D_3" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.84087, 0, -45.6429 )

[node name="Position3D_9" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.20088, 0, -44.3023 )

[node name="Position3D_13" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.0572, 0, -40.7017 )

[node name="Position3D_10" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.10202, 0, -44.6679 )

[node name="Position3D_11" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.8361, 0, -40.6906 )

[node name="Position3D_7" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.10115, 0, -45.3581 )

[node name="Position3D_12" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.28502, 0, -44.4833 )

[node name="Position3D_8" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.55321, 0, -45.1194 )

[node name="Position3D_4" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.8764, 0, -43.2988 )

[node name="Position3D_5" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.22637, 0, -45.078 )

[node name="Position3D_6" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.4549, 0, -42.4469 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Muzzle" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.183254, -0.759497 )

[node name="CollisionArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="CollisionArea"]
shape = SubResource( 2 )

[node name="Audio_Crash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_exited" from="RemovalArea" to="." method="_on_RemovalArea_area_exited"]
[connection signal="body_shape_exited" from="RemovalArea" to="." method="_on_RemovalArea_body_shape_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
